--- a/app/src/main/res/layout/novo_caderno.xml
+++ b/app/src/main/res/layout/novo_caderno.xml
@@ -15,13 +15,13 @@
         android:hint="Instituição"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/inst"/>
+        android:id="@+id/caderno_instituicao"/>
 
     <EditText
         android:hint="Orientador"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/orientador"/>
+        android:id="@+id/caderno_orientador"/>
 
 
 </LinearLayout>
